--- a/lab8/MainWindow.xaml
+++ b/lab8/MainWindow.xaml
@@ -35,7 +35,7 @@
             <Button Grid.Column="1" Grid.Row="1" x:Name="sqr_x" Content="x^2" FontSize="30"></Button>
             <Button Grid.Column="2" Grid.Row="1" x:Name="sqrt_x" Content="√x" FontSize="30"></Button>
             <Button Grid.Column="3" Grid.Row="1" x:Name="div" Content="/" FontSize="30"></Button>
-            <Button Grid.Column="0" Grid.Row="2" x:Name="num_7" Content="7" FontSize="30"></Button>
+            <Button Grid.Column="0" Grid.Row="2" x:Name="num_7" Content="7" FontSize="30" Click="num_7_Click"></Button>
             <Button Grid.Column="1" Grid.Row="2" x:Name="num_8" Content="8" FontSize="30"></Button>
             <Button Grid.Column="2" Grid.Row="2" x:Name="num_9" Content="9" FontSize="30"></Button>
             <Button Grid.Column="3" Grid.Row="2" x:Name="multi" Content="×" FontSize="30"></Button>
@@ -50,7 +50,7 @@
             <Button Grid.Column="0" Grid.Row="5" x:Name="neg" Content="+/-" FontSize="30"></Button>
             <Button Grid.Column="1" Grid.Row="5" x:Name="num_0" Content="0" FontSize="30"></Button>
             <Button Grid.Column="2" Grid.Row="5" x:Name="dec" Content="," FontSize="30"></Button>
-            <Button Grid.Column="3" Grid.Row="5" x:Name="equils" Content="=" FontSize="30"></Button>
+            <Button Grid.Column="3" Grid.Row="5" x:Name="equils" Content="=" FontSize="30" Click="equils_Click"></Button>
         </Grid>
     </Grid>
 </Window>
