--- a/lab8/MainWindow.xaml
+++ b/lab8/MainWindow.xaml
@@ -5,14 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:lab8"
         mc:Ignorable="d"
-        Title="MainWindow" Height="470" Width="300">
+        ResizeMode="NoResize"
+        Title="MainWindow" Height="470" Width="325">
     <Grid>
-        <StackPanel Height="150" Width="300" VerticalAlignment="Top">
-            <Button x:Name="nav_button" Height="50" Width="60" HorizontalAlignment="Left" Content="..." FontSize="30"></Button>
-            <TextBox x:Name="display" Height="75" Width="300" BorderThickness="0"></TextBox>
-        </StackPanel>
-
-        <Grid Height="300" Width="300" VerticalAlignment="Bottom" >
+        <Grid  Height="150"  VerticalAlignment="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <TextBlock x:Name="sec_display" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4"  FontSize="18" TextAlignment="Left" VerticalAlignment="Center"></TextBlock>
+            <TextBox x:Name="display" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="5" BorderThickness="0"  FontSize="22" TextAlignment="Left" VerticalAlignment="Center"></TextBox>
+        </Grid>
+        <Grid Height="300"  VerticalAlignment="Bottom" >
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -27,29 +39,29 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Grid.Row="0" x:Name="percent" Content="%" FontSize="30"></Button>
-            <Button Grid.Column="1" Grid.Row="0" x:Name="clear_" Content="CE" FontSize="30"></Button>
-            <Button Grid.Column="2" Grid.Row="0" x:Name="clear_all" Content="C" FontSize="30"></Button>
-            <Button Grid.Column="3" Grid.Row="0" x:Name="clear_last_number" Content="&lt;[x]" FontSize="30"></Button>
-            <Button Grid.Column="0" Grid.Row="1" x:Name="one_div_x" Content="1/x" FontSize="30"></Button>
-            <Button Grid.Column="1" Grid.Row="1" x:Name="sqr_x" Content="x^2" FontSize="30"></Button>
-            <Button Grid.Column="2" Grid.Row="1" x:Name="sqrt_x" Content="√x" FontSize="30"></Button>
-            <Button Grid.Column="3" Grid.Row="1" x:Name="div" Content="/" FontSize="30"></Button>
-            <Button Grid.Column="0" Grid.Row="2" x:Name="num_7" Content="7" FontSize="30" Click="num_7_Click"></Button>
-            <Button Grid.Column="1" Grid.Row="2" x:Name="num_8" Content="8" FontSize="30"></Button>
-            <Button Grid.Column="2" Grid.Row="2" x:Name="num_9" Content="9" FontSize="30"></Button>
-            <Button Grid.Column="3" Grid.Row="2" x:Name="multi" Content="×" FontSize="30"></Button>
-            <Button Grid.Column="0" Grid.Row="3" x:Name="num_4" Content="4" FontSize="30"></Button>
-            <Button Grid.Column="1" Grid.Row="3" x:Name="num_5" Content="5" FontSize="30"></Button>
-            <Button Grid.Column="2" Grid.Row="3" x:Name="num_6" Content="6" FontSize="30"></Button>
-            <Button Grid.Column="3" Grid.Row="3" x:Name="sub" Content="-" FontSize="30"></Button>
-            <Button Grid.Column="0" Grid.Row="4" x:Name="num_1" Content="1" FontSize="30"></Button>
-            <Button Grid.Column="1" Grid.Row="4" x:Name="num_2" Content="2" FontSize="30"></Button>
-            <Button Grid.Column="2" Grid.Row="4" x:Name="num_3" Content="3" FontSize="30"></Button>
-            <Button Grid.Column="3" Grid.Row="4" x:Name="add" Content="+" FontSize="30"></Button>
-            <Button Grid.Column="0" Grid.Row="5" x:Name="neg" Content="+/-" FontSize="30"></Button>
-            <Button Grid.Column="1" Grid.Row="5" x:Name="num_0" Content="0" FontSize="30"></Button>
-            <Button Grid.Column="2" Grid.Row="5" x:Name="dec" Content="," FontSize="30"></Button>
+            <Button Grid.Column="0" Grid.Row="0" x:Name="powof2" Content="2^nd" FontSize="30" Click="powof2_Click"></Button>
+            <Button Grid.Column="1" Grid.Row="0" x:Name="clear_" Content="CE" FontSize="30" Click="clear__Click"></Button>
+            <Button Grid.Column="2" Grid.Row="0" x:Name="clear_all" Content="C" FontSize="30" Click="clear_all_Click"></Button>
+            <Button Grid.Column="3" Grid.Row="0" x:Name="clear_last_number" Content="&lt;[x]" FontSize="30" Click="clear_last_number_Click"></Button>
+            <Button Grid.Column="0" Grid.Row="1" x:Name="one_div_x" Content="1/x" FontSize="30" Click="one_div_x_Click"></Button>
+            <Button Grid.Row="1" x:Name="sqr_x" Content="x^2" FontSize="30" Grid.Column="1" Click="sqr_x_Click"/>
+            <Button Grid.Column="2" Grid.Row="1" x:Name="sqrt_x" Content="√x" FontSize="30" Click="sqrt_x_Click"></Button>
+            <Button Grid.Column="3" Grid.Row="1" x:Name="div" Content="/" FontSize="30" Click="operations_click"></Button>
+            <Button Grid.Column="0" Grid.Row="2" x:Name="num_7" Content="7" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="1" Grid.Row="2" x:Name="num_8" Content="8" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="2" Grid.Row="2" x:Name="num_9" Content="9" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="3" Grid.Row="2" x:Name="multi" Content="*" FontSize="30" Click="operations_click"></Button>
+            <Button Grid.Column="0" Grid.Row="3" x:Name="num_4" Content="4" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="1" Grid.Row="3" x:Name="num_5" Content="5" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="2" Grid.Row="3" x:Name="num_6" Content="6" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="3" Grid.Row="3" x:Name="sub" Content="-" FontSize="30" Click="operations_click"></Button>
+            <Button Grid.Column="0" Grid.Row="4" x:Name="num_1" Content="1" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="1" Grid.Row="4" x:Name="num_2" Content="2" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="2" Grid.Row="4" x:Name="num_3" Content="3" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="3" Grid.Row="4" x:Name="add" Content="+" FontSize="30" Click="operations_click"></Button>
+            <Button Grid.Column="0" Grid.Row="5" x:Name="neg" Content="+/-" FontSize="30" Click="neg_Click"></Button>
+            <Button Grid.Column="1" Grid.Row="5" x:Name="num_0" Content="0" FontSize="30" Click="place_number"></Button>
+            <Button Grid.Column="2" Grid.Row="5" x:Name="dec" Content="." FontSize="30" Click="dec_Click"></Button>
             <Button Grid.Column="3" Grid.Row="5" x:Name="equils" Content="=" FontSize="30" Click="equils_Click"></Button>
         </Grid>
     </Grid>
