--- a/lab8/MainWindow.xaml
+++ b/lab8/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:lab8"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="MainWindow" Height="470" Width="325">
+        Title="Какулятор" Height="470" Width="325">
     <Grid>
         <Grid  Height="150"  VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
@@ -21,7 +21,7 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBlock x:Name="sec_display" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4"  FontSize="18" TextAlignment="Left" VerticalAlignment="Center"></TextBlock>
+            <TextBlock x:Name="sec_display" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"  FontSize="18" TextAlignment="Left" VerticalAlignment="Center" Margin="10"></TextBlock>
             <TextBlock x:Name="display" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="5"   FontSize="24" TextAlignment="Left" VerticalAlignment="Center" Margin="10"></TextBlock>
         </Grid>
         <Grid Height="300"  VerticalAlignment="Bottom" >
